# vetras-protocol

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: ci.yml  release.yml  security.yml
app/: cargo.toml
app/src/api/middleware/: auth.rs  rate_limit.rs  validation.rs
app/src/api/routes/: nodes.rs  stats.rs  validation.rs
app/src/models/: node.rs  stats.rs  validation.rs
app/src/services/: ai_services.rs  blockchain_service.rs  validation_service.rs
programs/vetra-core/: cargo.toml
programs/vetra-core/src/: errors.rs  lib.rs  processor.rs  state.rs  validation.rs
programs/vetra-core/tests/integration/: program.rs  setup.rs  validation-tests.rs
sdk/python/: setup.py
sdk/python/vetra/: client.py  types.py  utils.py
sdk/rust/: Cargo.toml
sdk/rust/src/: client.rs  types.rs  utils.rs
validator/: Cargo.toml
validator/config/: default.toml
validator/src/ai/: evaluator.rs  llm.rs  models.rs
validator/src/consensus/: engine.rs  types.rs
validator/src/network/: main.rs  peer.rs  protocol.rs
validator/src/storage/: database.rs  ipfs.rs
