[package]
name = "vetras-validator"
version = "0.1.0"
edition = "2021"
authors = ["Vetras Team"]
description = "Validator node implementation for the Vetras AI model validation platform"
license = "Apache-2.0"
repository = "https://github.com/kevinqiut/vetras-protocol"

[dependencies]
# Core async runtime
tokio = { version = "1.34", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Networking and P2P
libp2p = { version = "0.53", features = ["tcp", "dns", "websocket", "noise", "mplex", "yamux", "ping", "identify", "kad"] }
quinn = "0.10"
hyperlocal = "0.8"

# AI/ML Dependencies
onnxruntime = "0.0.14"
tokenizers = "0.14"
tch = { version = "0.13", features = ["download-libtorch"] }
half = "2.3"
ndarray = { version = "0.15", features = ["serde"] }
rust-bert = "0.21"

# Blockchain Integration
solana-sdk = "1.17"
solana-client = "1.17"
solana-program = "1.17"
anchor-client = "0.28"
anchor-lang = "0.28"

# Storage
ipfs-api = { version = "0.17", features = ["with-hyper-tls"] }
rocksdb = { version = "0.21", features = ["multi-threaded-cf"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
borsh = "0.10"
postcard = { version = "1.0", features = ["alloc"] }

# Cryptography
ed25519-dalek = "1.0"
x25519-dalek = "2.0"
sha2 = "0.10"
blake3 = "1.5"
rand = "0.8"

# Configuration
config = { version = "0.13", features = ["toml"] }
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }

# Metrics and Monitoring
prometheus = { version = "0.13", features = ["process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.19"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
parking_lot = "0.12"
dashmap = "5.5"
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
byte-unit = "4.0"
tempfile = "3.8"
dirs = "5.0"

# Logging
log = "0.4"
env_logger = "0.10"
colored = "2.0"

[dev-dependencies]
tokio-test = "0.4"
test-case = "3.2"
mockall = "0.11"
proptest = "1.3"
criterion = "0.5"
fake = { version = "2.8", features = ["derive"] }
rstest = "0.18"
wiremock = "0.5"

[[bin]]
name = "vetras-validator"
path = "src/main.rs"

[features]
default = ["gpu", "telemetry"]
gpu = ["tch/cuda"]
cpu-only = []
telemetry = ["opentelemetry", "opentelemetry-jaeger"]
simulated = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = [
    ".",
    "tests"
]